--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -182,6 +182,20 @@ config TOUCHSCREEN_CYTTSP_I2C
 	  To compile this driver as a module, choose M here: the
 	  module will be called cyttsp_i2c.
 
+config TOUCHSCREEN_CYTTSP_GEN4
+       tristate "Cypress GEN4 TTSP based touchscreens"
+       depends on I2C
+       default n
+       help
+         Say Y here if you have a Cypress GEN4 TTSP based touchscreen.
+         TMA400 is a multi-touch screen which can report upto 10
+         touches at a time.
+
+         If unsure, say N.
+
+         To compile this driver as a module, choose M here: the
+         module will be called cyttsp-i2c.         
+
 config TOUCHSCREEN_CYTTSP_SPI
 	tristate "support SPI bus connection"
 	depends on TOUCHSCREEN_CYTTSP_CORE && SPI_MASTER
