--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -681,6 +681,11 @@ config BU52031NVX_POUCHDETECT
 	help
 	  depends on BU52031NVX
 
+config PIEZO
+    tristate "ti_drv2667"
+    default n
+    depends on I2C
+	  
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
